--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -19,7 +19,7 @@ body {
   overflow-x: hidden;
 }
 
-.app-container {
+.full-screen {
   position: absolute;
   left: 0;
   right: 0;
@@ -31,11 +31,7 @@ body {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-box-align: stretch;
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
+  top:44px;
 }
 
 .home-page {
